--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.jpa.hibernate.ddl-auto= create
 # App Properties
 ken.jwtSecret= kenSecretKey
 ken.jwtExpirationMs= 86400000
+
+#Auth
+spring.mail.host = smtp.elasticemail.com
+spring.mail.port = 2525
+spring.mail.username = AuthenticationService@ken.com
+spring.mail.password = 428C7D672868DDB99EAF0105CD809FF46CE5
+
