setup maven version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/securityreact
-spring.datasource.username=postgres
-spring.datasource.password=PostgreSQL
+#Heroku
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
+
+#Local
+#spring.datasource.url= jdbc:postgresql://localhost:5432/securityreact
+#spring.datasource.username=postgres
+#spring.datasource.password=PostgreSQL
+#spring.jpa.generate-ddl=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
